--- a/public/styles.css
+++ b/public/styles.css
@@ -1,57 +1,273 @@
+:root {
+  --primary-color: #f0f5f9;
+  --secondary-color: #c9d6df;
+  --tertiary-color: #52616b;
+  --quarternary-color: #1e2022;
+}
+
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  color: var(--quarternary-color);
+  font-family: 'JetBrains Mono', monospace;
+}
+
+header {
+  background-color: var(--secondary-color);
+  opacity: .8;
+  display: flex;
+  justify-content: space-between;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding: 15px;
+  background-position: cover;
+  z-index: 1;
+}
+
+header h1 {
+  font-size: 40px;
+  text-shadow: 2px 2px white;
+}
+
+.menu-btn {
+  display: none;
+}
+
+header a {
+  text-decoration: none;
+  color: var(--quarternary-color);
+  transition: 2s;
+  z-index: 2;
+}
+
+header li {
+  position: relative;
+}
+
+header a::before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background: var(--tertiary-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: 2s;
+  z-index: -1;
+}
+
+header a:hover::before {
+  opacity: 1;
+  transform: rotate(900deg);
+  border-radius: 20%;
+
+}
+
+header a:hover {
+  color: var(--primary-color);
+}
+
+header nav {
+  margin: 15px;
+}
+
+header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  list-style: none;
+  align-items: center;
+}
+
+header nav ul li {
+  margin: 0 20px;
+}
+
+.hero {
+  background-image: url(../newPhotos/mtwhitney.jpeg);
+  background-size: cover;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 400px;
+  position: relative;
+}
+
+.ben-pic img {
+  height: 200px;
+  border-radius: 300px;
+  transition: transform 2s;
+  border: #1e2022;
+
+}
+
+/* .ben-pic img:hover {
+  transform: rotate(360deg);
+} */
+
+.cool-subtitle {
+  color: var(--primary-color);
+  font-size: 30px;
+  text-shadow: 2px 2px #1e2022;
+}
+
+.content {
+  margin: 50px auto;
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.title {
+  display: flex;
+  flex: 1 30%;
+  border-right: 2px solid var(--quarternary-color);
+  height: 100px;
+  align-items: center;
+  font-size: 25px;
+  text-shadow: 2px 2px var(--secondary-color);
+}
+
+.words {
+  display: flex;
+  flex: 2 70%;
+  padding: 30px;
+  align-items: center;
+}
+
+.theGrid {
+  flex: 2 70%;
+  padding: 30px;
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 20px;
+  border-radius: 20%;
+}
+
+.gridItem {
+  position: relative;
+  background-color: var(--tertiary-color);
+  border: 3px solid var(--quarternary-color);
+}
+
+.gridItem img {
+  object-fit: cover;
+  width: 100%;
+  transition: 1s;
+}
+
+.gridItem img:hover {
+  opacity: .3;
+}
+
+.gridItem p {
+  position: absolute;
+  bottom: 30%;
+  color: var(--primary-color);
+  background-color: var(--tertiary-color);
+  z-index: 3;
+  font-size: 15px;
+}
+
+.gridItem1 {
+  grid-column: 1/ span 2;
+  grid-row: 1/ span 2;
+}
+
+#contact-me ul {
+  font-size: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  list-style: none;
+  align-items: center;
+}
+
+#contact-me a {
+  color: var(--quarternary-color);
+}
+
+#contact-me ul li {
+  margin: 0 20px;
+  text-decoration: underline;
+  color: var(--quarternary-color);
+}
+
+@media screen and (max-width: 768px) {
+  .theGrid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
   }
-  html {
-    font-family: "Montserrat", sans-serif;
-  }
-  body {
-    background: #eee;
-    padding: 0 16px;
-  }
-  
-  header {
-    background-color: #f5ba13;
-    margin: auto -16px;
-    padding: 16px 32px;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
-  }
-  
+}
+
+@media screen and (max-width: 500px) {
   header h1 {
-    color: #fff;
-    font-family: "McLaren", cursive;
-    font-weight: 200;
+    font-size: 30px;
   }
-  
-  footer {
-    position: absolute;
-    text-align: center;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;
+
+  .menu-btn {
+    display: block;
+    cursor: pointer;
   }
-  
-  footer p {
-    color: #ccc;
+
+  .menu-item {
+    display: none;
+    position: relative;
   }
-  .note {
-    background: #fff;
-    border-radius: 7px;
-    box-shadow: 0 2px 5px #ccc;
+
+  nav {
+    position: relative;
+    display: inline-block;
+    width: 50%;
+  }
+
+  nav li {
     padding: 10px;
-    width: 240px;
-    margin: 16px;
-    float: left;
+    display: none;
   }
-  .note h1 {
-    font-size: 1.1em;
-    margin-bottom: 6px;
+
+  nav ul {
+    margin: 0 0 0 50%;
+    width: 50%;
   }
-  .note p {
-    font-size: 1.1em;
-    margin-bottom: 10px;
-    white-space: pre-wrap;
-    word-wrap: break-word;
+
+  nav ul:hover .menu-item {
+    display: block;
   }
-  
+
+  nav ul:hover li {
+    display: block;
+    right: 30px;
+  }
+
+  .cool-subtitle {
+    position: absolute;
+    bottom: 70px;
+  }
+
+  .title {
+    flex: 1 100%;
+    justify-content: center;
+    border-right: none;
+    border-bottom: 2px solid var(--quarternary-color);
+  }
+
+  #contact-me ul {
+    justify-content: center;
+    margin: 0 auto;
+    width: 60%;
+  }
+
+  #contact-me li {
+    padding: 10px 0;
+  }
+}
