connected css and images

--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -90,7 +90,7 @@ header nav ul li {
 }
 
 .hero {
-  background-image: url(../newPhotos/mtwhitney.jpeg);
+  background-image: url(../images/mtwhitney.jpeg);
   background-size: cover;
   display: flex;
   justify-content: space-evenly;
