--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,7 +1,7 @@
 :root {
     --dk-blue-color: #1E83AE;
     --blue-color: #125688;
-    --light-blue-color: #6cc644;
+    --light-green-color: #6cc644;
     --green-color: #6dcd9a;
   }
 
@@ -9,9 +9,12 @@ footer {
     width: 100%;
     display: inline-block;
     margin: 2em 0;
-    height: 70px;
+    height: 7%;
     background-color: #999;
     margin-bottom: 0;
+    position: -webkit-sticky;
+    position: sticky;
+    bottom: 0;
 }
 
 .copyright {
@@ -47,18 +50,33 @@ footer {
     width: 30%;
 }
 
-.face {
+.insta {
     background-color: var(--blue-color);
     width: 30%;
 }
 
-.tweet {
-    background-color: var(--light-blue-color);
+.github {
+    background-color: var(--light-green-color);
     width: 30%;
 }
 
-.support {
-    background-color: var(--green-color);
-    font-size: 0.8em;
-    width: 40%;
+@media screen and (max-width: 768px) {
+    .copyright {
+        width: 0%;
+        float: left;
+    }
+    .social {
+        width: 90%;
+        float: right;
+    }
+    footer {
+        width: 100%;
+        margin: 2em 0;
+        height: 10%;
+        background-color: #999;
+        margin-bottom: 0;
+    }
+   footer p{
+        display: none;
+    }
 }
