--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -1,34 +1,39 @@
 textarea {
-	width: 200px;
-	height: 120px;
-	padding: 5px;
+  width: 200px;
+  height: 120px;
+  padding: 5px;
 }
 
 .submitBtn {
 
-    padding: 12px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 10px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    font-family: 'JetBrains Mono', monospace;
-    background-color: white; 
-    color: black; 
-    border: 1px solid black;
-  }
-  
-  .submitBtn:hover {
-    background-color: black;
-    color: white;
-  }
+  padding: 12px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 10px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  font-family: 'JetBrains Mono', monospace;
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+}
+
+.submitBtn:hover {
+  background-color: black;
+  color: white;
+}
 
 .words {
-    justify-content: center;
+  justify-content: center;
+}
+
+#contact-form {
+border: 2px solid black;
+padding: 10px 10px 25px 10px;
 }
 
 #contact-form div {
-    padding: 10px;
+  padding: 10px;
 }
