changed dropdown color

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -34,7 +34,7 @@
 
 .navbar span:hover,
 .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: #1E83AE;
 }
 
 .dropdown-content {
