--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -264,6 +264,16 @@ header h1 {
     grid-template-rows: repeat(4, 1fr);
   }
 
+  .content {
+    margin: 0 auto;
+    width: 95%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    min-height: 80vh;
+    position: relative;
+  }
+
   .words {
     /* position: absolute;
     top: 65%; */
