--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -37,3 +37,15 @@ padding: 10px 10px 25px 10px;
 #contact-form div {
   padding: 10px;
 }
+
+.contactBox {
+  width: 85%;
+  height: 300px;
+  border: 1px solid grey;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 25px;
+}
